# pdf-template-lambda

./: .gitignore  pdf-template-lambda.cabal  shell.nix  template.yaml
.github/workflows/: main.yaml
app/: Main.hs
deploy/: .terraform.lock.hcl  main.tf  terraform.tf
src/PdfTemplate/: Worker.hs
